--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,16 @@
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php82” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php82 .php .php8 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
-
-# FORCE HTTPS REDIRECT
 <IfModule mod_rewrite.c>
     RewriteEngine On
+
+    # Redirect WWW to non-WWW
+    RewriteCond %{HTTP_HOST} ^www\.efgold\.net [NC]
+    RewriteRule ^ https://efgold.net%{REQUEST_URI} [R=301,L]
 
     # Redirect HTTP to HTTPS
     RewriteCond %{HTTPS} off
     RewriteRule ^ https://efgold.net%{REQUEST_URI} [R=301,L]
 
-    # Redirect WWW to non-WWW
-    RewriteCond %{HTTP_HOST} ^www\.efgold\.net [NC]
-    RewriteRule ^ https://efgold.net%{REQUEST_URI} [R=301,L]
+    # Allow React to handle routes
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.html [L,QSA]
 </IfModule>
