--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.14",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
